доработка таймера процесса

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -960,3 +960,8 @@ GroupIsNotSelected=Group is not selected
 Structure=Structure
 OrganizationOrDivisionNotSelected=No organization or division selected
 OurApologies=Our apologies!
+ProcessExplorer=Process explorer
+ProcessTypeNotSelected=Process type not selected
+RepeatEveryDay=Repeat every day
+RepeatEveryWeek=Repeat every week
+RepeatEveryMonth=Repeat every month
