разработка компонента Сообщение и доработка таймера

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -965,3 +965,5 @@ ProcessTypeNotSelected=Process type not selected
 RepeatEveryDay=Repeat every day
 RepeatEveryWeek=Repeat every week
 RepeatEveryMonth=Repeat every month
+Procedure=Procedure
+AddMessageElement=Add element 'Message'
