--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -967,3 +967,4 @@ RepeatEveryWeek=Repeat every week
 RepeatEveryMonth=Repeat every month
 Procedure=Procedure
 AddMessageElement=Add element 'Message'
+InputNumberFolder=Input folder number
