--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -247,3 +247,5 @@ DisplaysObjectsRelatedTo=The log displays objects related to ''{0}''
 PossibleErroralreadyFixed=It is possible that this error has already been fixed by us and you only need to update the software!
 NoHaveObjectsToInsert=There are no objects to insert!
 DateStartNoSet=Start date not set!
+UserWillBAccessChangeFolder=The user will be given access to add documents to the folder and delete documents from the folder
+CannotAddRightBecauseInheritsRights=You cannot add the ''{0}'' right to an object because the object inherits its rights! To change permissions, disable inheritance in the ''{0}'' object.
