--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -968,3 +968,5 @@ RepeatEveryMonth=Repeat every month
 Procedure=Procedure
 AddMessageElement=Add element 'Message'
 InputNumberFolder=Input folder number
+AvailableRoles=Available roles
+Recipients=Recipients
