работа над ошибками

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -970,3 +970,5 @@ AddMessageElement=Add element 'Message'
 InputNumberFolder=Input folder number
 AvailableRoles=Available roles
 Recipients=Recipients
+Controller=Controller
+SelectedRoles=Selected roles
