--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -250,3 +250,4 @@ DateStartNoSet=Start date not set!
 UserWillBAccessChangeFolder=The user will be given access to add documents to the folder and delete documents from the folder
 CannotAddRightBecauseInheritsRights=You cannot add the ''{0}'' right to an object because the object inherits its rights! To change permissions, disable inheritance in the ''{0}'' object.
 CloseBrowserAlert=Forced closure of the browser will cause Your license to remain busy and the session to remain open. To release the license and close the session, use the "End session" button.
+SaveUserBeforeMakeInbox=Save the user before select the folder!
