--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -973,3 +973,9 @@ Recipients=Recipients
 Controller=Controller
 SelectedRoles=Selected roles
 AddUserRightChangeFolder=Add user rights to change folder
+CalculateDeadline=To calculate the date of the deadline
+DurationWorkingDay=The duration of the working day
+BeginWorkingDay=Begin of the working day
+StandardWorkingTime=Standard working time
+WorkTime=Work time
+InputTaskContent=Input task content
