--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -253,3 +253,7 @@ CloseBrowserAlert=Forced closure of the browser will cause Your license to remai
 SaveUserBeforeMakeInbox=Save the user before select the folder!
 StaffIsNotSelected=Staff is not Selected!
 DepartamentSelected=Departament selected
+DateBeginNoSet=Begin date not set!
+ExecutorNotSet=Executor is not set!
+SelectedDateIsWeekend=The selected date is the weekend!
+DeadlineCalcWorkingCalendar=The deadline ''{0}'' is calculated taking into account the working calendar!
