разработка рабочего времени

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -979,3 +979,5 @@ BeginWorkingDay=Begin of the working day
 StandardWorkingTime=Standard working time
 WorkTime=Work time
 InputTaskContent=Input task content
+CalendarWorkTime=The working time calendar
+EndWorkingDay=End of working day
