разработка рабочего времени

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -981,3 +981,5 @@ WorkTime=Work time
 InputTaskContent=Input task content
 CalendarWorkTime=The working time calendar
 EndWorkingDay=End of working day
+Previous=Previous
+Next=Next
