календарь рабочего времени

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -983,3 +983,6 @@ CalendarWorkTime=The working time calendar
 EndWorkingDay=End of working day
 Previous=Previous
 Next=Next
+Hollyday=Hollyday
+Workday=Workday
+Weekend=Weekend
