--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -987,3 +987,9 @@ Hollyday=Hollyday
 Workday=Workday
 Weekend=Weekend
 ConcorderList=List of concorder
+UseSimpleCard=Use simple cards
+Issued=Issued
+Removed=Removed
+Checked=Checked
+AllRemarksChecked=All remarks checked?
+AddRemark=Add remark
