--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -257,3 +257,4 @@ DateBeginNoSet=Begin date not set!
 ExecutorNotSet=Executor is not set!
 SelectedDateIsWeekend=The selected date is the weekend!
 DeadlineCalcWorkingCalendar=The deadline ''{0}'' is calculated taking into account the working calendar!
+ForAddRemarkSaveProcess=For add remark save card of process!
