--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -993,3 +993,9 @@ Removed=Removed
 Checked=Checked
 AllRemarksChecked=All remarks checked?
 AddRemark=Add remark
+MyRemarks=My remarks
+CreateRemark=Create remark
+RemarkRemoved=Remark removed
+RemarkIssued=Remark issued
+RollUp=Roll up
+Confirmed=Confirmed
