--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -995,7 +995,7 @@ AllRemarksChecked=All remarks checked?
 AddRemark=Add remark
 MyRemarks=My remarks
 CreateRemark=Create remark
-RemarkRemoved=Remark removed
+RemarkChecked=Remark checked
 RemarkIssued=Remark issued
 RollUp=Roll up
 Confirmed=Confirmed
