доработка для ftender

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -999,3 +999,5 @@ RemarkChecked=Remark checked
 RemarkIssued=Remark issued
 RollUp=Roll up
 Confirmed=Confirmed
+BookNumber=Book number
+BookDate=Book date
