--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -259,3 +259,4 @@ SelectedDateIsWeekend=The selected date is the weekend!
 DeadlineCalcWorkingCalendar=The deadline ''{0}'' is calculated taking into account the working calendar!
 ForAddRemarkSaveProcess=For add remark save card of process!
 OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
+AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
