драг энд дроп и прочие радости

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -260,3 +260,4 @@ DeadlineCalcWorkingCalendar=The deadline ''{0}'' is calculated taking into accou
 ForAddRemarkSaveProcess=For add remark save card of process!
 OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
 AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
+FolderCouldNotBeFound=The folder could not be found!
