ряд косяков поправил2

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -261,3 +261,4 @@ ForAddRemarkSaveProcess=For add remark save card of process!
 OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
 AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
 FolderCouldNotBeFound=The folder could not be found!
+OperationIsNotApplicable=This operation is not applicable!
