--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -22,7 +22,7 @@ Employee=Employee
 CloseConfirmExit=Please, confirm program exit
 Deputy=Im the Deputy
 Delete=Delete
-#\u041e\u0442\u043a\u0440\u044b\u0442\u044c
+#\u041E\u0442\u043A\u0440\u044B\u0442\u044C
 Open=Open
 Commands=Commands
 Actions=Actions
@@ -71,7 +71,7 @@ bundle.EmptyField=Field must be filled!
 Confirm=Confirm
 InfoOnCloseBrouser=Attention! The forced closing of the browser will lock Your account for 5 minutes!!!
 Version=Version
-DeveloperInfo=\u00a9 MaxFill LLC 2015-2018 All rights reserved
+DeveloperInfo=\u00A9 MaxFill LLC 2015-2018 All rights reserved
 ErrFileSize=It exceeds the file size!
 ShowVersion=show versions of a file
 Home=Home
@@ -169,7 +169,7 @@ PressSaveOrCancel=Click the 'Back' button to go back or click 'Exit' to exit wit
 Exit=Exit
 RightOwner=Right owner
 FoldersRightRoot=Folders root rights
-#\u041e\u0431\u044a\u0435\u043a\u0442
+#\u041E\u0431\u044A\u0435\u043A\u0442
 Object=Object
 ConfirmDelete=Delete confirm!
 AreYouSure=Are you sure?
@@ -414,10 +414,10 @@ MailService=Mail service
 MailServer=Mail server
 MailMessage=Mail message
 Subject=Subject
-#\u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c \u043d\u0430 e-mail \u0432 \u0432\u0438\u0434\u0435 \u0432\u043b\u043e\u0436\u0435\u043d\u0438\u044f
+#\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u043D\u0430 e-mail \u0432 \u0432\u0438\u0434\u0435 \u0432\u043B\u043E\u0436\u0435\u043D\u0438\u044F
 SendToEmailAsAttache=Send to email as attache
 SendToEmailAsLink=Send to email as link
-#\u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c
+#\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
 Send=Send
 Content=Content
 Addresses=Addresses
@@ -578,7 +578,7 @@ Reset=Reset
 DocumentPreviewIisNotAvailable=The document preview is not available. Download the document to your computer and open.
 DocStatuses=Documents statuses
 DocStatusesSelector=Document statuses selector
-#\u0410\u043a\u0442\u0443\u0430\u043b\u044c\u043d\u044b\u0439 \u0440\u0435\u043b\u0438\u0437
+#\u0410\u043A\u0442\u0443\u0430\u043B\u044C\u043D\u044B\u0439 \u0440\u0435\u043B\u0438\u0437
 ActualRelease=Actual release
 GoToSupport=GoToSupport
 CurrentRelease=Set release
@@ -670,9 +670,9 @@ RemoveSelectedImages=Remove Selected Images
 DeleteSelected=Delete selected
 RemoveAlImages=Remove All Images
 Rotate=Rotate
-Rotate180=Rotate 180\u00b0
+Rotate180=Rotate 180\u00B0
 RotateLeft=Rotate left
-RotateRight=Rotate \u043aight
+RotateRight=Rotate \u043Aight
 GotoFirst=Goto first
 GotoLast=Goto last
 GotoBack=Goto back
@@ -1002,3 +1002,6 @@ Confirmed=Confirmed
 Path=Path
 Icon=Path
 Path=Path
+Curator=Curator
+MakeRegNumber=To generate a registration number
+AddProcedureElement=Add element 'Procedure'
