--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -87,7 +87,7 @@ LoadedDocHelp=If document download does not start automatically, click on this l
 FileNotFound=File not found!
 DocumentNotFound=Document not found!
 PasswordsNotMatch=Passwords do not match!
-#\u041f\u0430\u0440\u043e\u043b\u044c \u043d\u0435 \u0432\u0435\u0440\u043d\u044b\u0439!
+#\u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0435 \u0432\u0435\u0440\u043D\u044B\u0439!
 PasswordIncorrect=The current password is not correct!
 PasswordIsChange=Password change!
 UsedLDAPauth=You use authentication through LDAP. To change the password, contact your LDAP administrator
@@ -209,6 +209,7 @@ ProcessExecutionInterrupted=The execution of the process interrupted!
 ErrorUnpackingProcessDiagram=Error unpacking process diagram!
 TaskNoHaveListResult=No result list is set for the task!
 IncorrectConditionRouteProcess=An incorrect condition in the route process!
+IncorrectProcedureRouteProcess=An incorrect procedure in the route process!
 ProcedureSettingStateContainsIncorrectValue=The document state setting procedure contains an incorrect value!
 StateProcessRouteNotFound=The state specified in the process route was not found in the database!
 IncorrectLinkProcess=Incorrect link to the process!
