--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -87,7 +87,7 @@ LoadedDocHelp=If document download does not start automatically, click on this l
 FileNotFound=File not found!
 DocumentNotFound=Document not found!
 PasswordsNotMatch=Passwords do not match!
-#\u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0435 \u0432\u0435\u0440\u043D\u044B\u0439!
+#\u041f\u0430\u0440\u043e\u043b\u044c \u043d\u0435 \u0432\u0435\u0440\u043d\u044b\u0439!
 PasswordIncorrect=The current password is not correct!
 PasswordIsChange=Password change!
 UsedLDAPauth=You use authentication through LDAP. To change the password, contact your LDAP administrator
@@ -150,7 +150,7 @@ ERROR_INIT_USER_SETTINGS=Error init user personal settings!
 SettingLockDocInfo=Edit the document file is accompanied by the installation of blocking. If specified in the "lock Period" the time You won't unlock it, the file will be automatically unlocked. However, if You have not saved changes to the file, they will be lost. Before automatically unlocking You will be sent several notices about the need to remove the lock. If You need more time to edit, just change the time in the "Time lock". Information about the locks You have set are displayed in the filter "on my editing."
 SetLockDocAndOpenFile=After clicking the "Set lock" button lock will be installed at the specified time, the file is opened for editing.
 Attention=Attention!
-DocumentDoNotContainMajorVersion=This document does not contain a major version. Open the document and under "Version" select the version you want to open.
+DocumentDoNotContainMajorVersion=This document does not contain a file major version!
 SetUnLockDoc=Before removing the lock, save the file in the editor and close the editor. To unlock, press "Unlock".
 TimerRestarted=The timer is restarted
 YouNeedUnlockDocument=You need to unlock taken to edit the document!
