--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1008,5 +1008,10 @@ AddProcedureElement=Add element 'Procedure'
 NoAgreementWasMade=No agreement was made
 VersionDoc=Version document
 DocumentForConcorded=Document for concorded
-SendToAll=Send to all
+NewEditionSendToAll=New document edition - send to all
 SendJustDoNotAgree=Send just do not agree
+RegisterDocument=To register the document
+RegisterProcess=To register the process
+Action=Action
+NumberSheetConcorder=The number of the sheet aligning
+AutomaticallyGenerated=Automatically generated
