--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -263,3 +263,5 @@ OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
 AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
 FolderCouldNotBeFound=The folder could not be found!
 OperationIsNotApplicable=This operation is not applicable!
+DiagramNotHaveTasks=In the diagram there are no tasks!
+NoEmailSpecified=No e-mail specified!
