--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1015,3 +1015,8 @@ RegisterProcess=To register the process
 Action=Action
 NumberSheetConcorder=The number of the sheet aligning
 AutomaticallyGenerated=Automatically generated
+ProcessFinished=Process finished
+SMTPserver=SMTP server
+Notify=Notify
+UploadToFile=To upload a file
+ConfirmCreateZIPFolder=A zip archive of the folder will be generated and unloaded. Continue?
