--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -265,3 +265,9 @@ FolderCouldNotBeFound=The folder could not be found!
 OperationIsNotApplicable=This operation is not applicable!
 DiagramNotHaveTasks=In the diagram there are no tasks!
 NoEmailSpecified=No e-mail specified!
+TaskIsFinishedBecauseProcessComplete=Task is finished, because the process is complete.
+NoYourRemarksActionRequiresRemarks=No Your remarks! This action requires actual remarks!
+ActionNotAvailableHaveActualRemarks=This action is not available because there Are your actual remarks!
+FailedGenerateZIP=Failed to generate ZIP archive!
+MessageSentUsers=Message sent to user(s)
+NotificationNewRemark=Notification of new remark
