--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -944,8 +944,8 @@ AddDocument=Add document
 AddExistingDocument=Add an existing document
 DeleteFromList=Delete from list
 NumberShort=#
-ChangeDocumentStateTo=Change the document state to:
-AddDocumentStatus=Add document status:
+ChangeDocumentStateTo=Change the document state to
+AddDocumentStatus=Add document status
 ColorSchemeOn=The color scheme on
 CreateProcess=Create process
 AddTimer=Add 'Timer' element
@@ -1020,3 +1020,6 @@ SMTPserver=SMTP server
 Notify=Notify
 UploadToFile=To upload a file
 ConfirmCreateZIPFolder=A zip archive of the folder will be generated and unloaded. Continue?
+ActulTasks=Actul tasks
+SaveAsProcResult=Save in process result
+DefaultTaskName=Default text of task 
