--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -271,3 +271,4 @@ ActionNotAvailableHaveActualRemarks=This action is not available because there A
 FailedGenerateZIP=Failed to generate ZIP archive!
 MessageSentUsers=Message sent to user(s)
 NotificationNewRemark=Notification of new remark
+Nothing\u0421hosen=Nothing is chosen!
