--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -99,7 +99,7 @@ MessageSent=The message sent to ''{0}''!
 ConnectLDAPFailed=Failed connect to LDAP server!
 UserLoginIsExsist=A user with login ''{0}'' already exists!
 DeleteObjectHaveChildItems=The deleted object ''{0}'' has child objects!
-StaffUsedInDocs=Staff ''{0}'' used in the documents
+StaffUsedInDocs=Staff ''{0}'' used in the documents!
 StaffUsedInUsers=Staff ''{0}'' unit tied to user accounts!
 PartnerUsedInDocs=The partner ''{0}'' used in documents!
 DocTypeUsedInDocs=The type ''{0}'' used in documents!
@@ -272,3 +272,8 @@ FailedGenerateZIP=Failed to generate ZIP archive!
 MessageSentUsers=Message sent to user(s)
 NotificationNewRemark=Notification of new remark
 Nothing\u0421hosen=Nothing is chosen!
+DocumentUsedInProcesses=The document ''{0}'' is used in processes!
+StaffUsedInProcesses=The staff unit ''{0}'' is used in processes!
+CompanyUsedInDocs=The company ''{0}'' is used in processes!
+CompanyUsedInProcesses=The company ''{0}'' is used in documents!
+StaffUsedInTasks=The staff unit ''{0}'' is used in tasks!
