--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -277,3 +277,5 @@ StaffUsedInProcesses=The staff unit ''{0}'' is used in processes!
 CompanyUsedInDocs=The company ''{0}'' is used in processes!
 CompanyUsedInProcesses=The company ''{0}'' is used in documents!
 StaffUsedInTasks=The staff unit ''{0}'' is used in tasks!
+File\u0421reated=File ''{0}'' created!
+ProcessNotFound=Process for ID ''{0}'' not found!
