--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -279,3 +279,7 @@ CompanyUsedInProcesses=The company ''{0}'' is used in documents!
 StaffUsedInTasks=The staff unit ''{0}'' is used in tasks!
 File\u0421reated=File ''{0}'' created!
 ProcessNotFound=Process for ID ''{0}'' not found!
+TaskNoHaveName=Task no have name!
+Reminder=Reminder
+DeadlineProcessInPastTime=The process deadline is specified in the past time!
+DeadlineTaskInPastTime=The task deadline is specified in the past time!
