--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -283,3 +283,5 @@ TaskNoHaveName=Task no have name!
 Reminder=Reminder
 DeadlineProcessInPastTime=The process deadline is specified in the past time!
 DeadlineTaskInPastTime=The task deadline is specified in the past time!
+NotifyFromProcess=Notify from process
+PleasePayAttentionMyRemark=Colleagues! Please pay attention to my remark!
