--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -285,3 +285,6 @@ DeadlineProcessInPastTime=The process deadline is specified in the past time!
 DeadlineTaskInPastTime=The task deadline is specified in the past time!
 NotifyFromProcess=Notify from process
 PleasePayAttentionMyRemark=Colleagues! Please pay attention to my remark!
+UserUsedInDocs=User ''{0}'' used in documents!
+UserUsedInProcesses=User ''{0}'' used in processes!
+UserUsedInPartneres=User ''{0}'' used in partners!
