шт. единицы и календарь

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1024,3 +1024,4 @@ ActulTasks=Actul tasks
 SaveAsProcResult=Save in process result
 DefaultTaskName=Default text of task 
 EnterInApprovalSheet=Enter in the approval sheet
+ForAll=For all
