--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1025,3 +1025,4 @@ SaveAsProcResult=Save in process result
 DefaultTaskName=Default text of task 
 EnterInApprovalSheet=Enter in the approval sheet
 ForAll=For all
+DefaultDeadline=Default deadline
