--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -288,3 +288,4 @@ PleasePayAttentionMyRemark=Colleagues! Please pay attention to my remark!
 UserUsedInDocs=User ''{0}'' used in documents!
 UserUsedInProcesses=User ''{0}'' used in processes!
 UserUsedInPartneres=User ''{0}'' used in partners!
+TaskCannotCompletedBecauseProcessStopped=The task cannot be completed because the process is stopped.
