задачи, состояния, маршруты

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1026,3 +1026,5 @@ DefaultTaskName=Default text of task
 EnterInApprovalSheet=Enter in the approval sheet
 ForAll=For all
 DefaultDeadline=Default deadline
+MyTasks=My tasks
+ShowOnlyExecute=Show only execute
