разные косяки устранены

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1028,3 +1028,5 @@ ForAll=For all
 DefaultDeadline=Default deadline
 MyTasks=My tasks
 ShowOnlyExecute=Show only execute
+OpenTask=Open task
+ForChief=for chief
