--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -289,3 +289,8 @@ UserUsedInDocs=User ''{0}'' used in documents!
 UserUsedInProcesses=User ''{0}'' used in processes!
 UserUsedInPartneres=User ''{0}'' used in partners!
 TaskCannotCompletedBecauseProcessStopped=The task cannot be completed because the process is stopped.
+ResultApprovalNotAffectProcess=The result of the approval of this agreement will not affect the result of the approval process!
+OwnerNoSet=Owner no set!
+ParentNoSet=Parent no set!
+Save\u0421hangesForChangesTakeEffect=Save changes for changes to take effect!
+CannotStartProcessUnprocessedRemarks=You cannot start the process while there are unprocessed comments!
