--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1030,3 +1030,4 @@ MyTasks=My tasks
 ShowOnlyExecute=Show only execute
 OpenTask=Open task
 ForChief=for chief
+RemarkNotTakenAccount=The remark is not taken into account
