--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1031,3 +1031,5 @@ ShowOnlyExecute=Show only execute
 OpenTask=Open task
 ForChief=for chief
 RemarkNotTakenAccount=The remark is not taken into account
+MyFolder=My folder
+AgreedUponEmployee=Agreed upon by the employee
