--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -294,3 +294,4 @@ OwnerNoSet=Owner no set!
 ParentNoSet=Parent no set!
 Save\u0421hangesForChangesTakeEffect=Save changes for changes to take effect!
 CannotStartProcessUnprocessedRemarks=You cannot start the process while there are unprocessed comments!
+SystemFolderCannotBeChanged=The folder ''{0}'' is a system folder!
