переделаны шаблоны процессов и добавлено новое условие в схему процесс

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -914,7 +914,7 @@ Template=Template
 CreateNewTemplate=Create new template
 Rewrite=Rewrite
 Templates=Templates
-TemplateSaved=Template saved
+TemplateSaved=Template saved!
 Assistant=Assistant
 Assistants=Assistants
 Always=Always
@@ -1033,3 +1033,8 @@ ForChief=for chief
 RemarkNotTakenAccount=The remark is not taken into account
 MyFolder=My folder
 AgreedUponEmployee=Agreed upon by the employee
+SaveAsNewTemlate=Save as new template
+SaveSchemaToTemplate=Select a template and save the process diagram to it
+SaveTemlate=Save temlate
+TemplateLoad=Template load!
+EnterPartnerWithoutQuotation=Enter the name of the organization without quotation marks
