--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -279,7 +279,7 @@ CompanyUsedInProcesses=The company ''{0}'' is used in documents!
 StaffUsedInTasks=The staff unit ''{0}'' is used in tasks!
 File\u0421reated=File ''{0}'' created!
 ProcessNotFound=Process for ID ''{0}'' not found!
-TaskNoHaveName=Task no have name!
+TaskNoHaveName=In one of the tasks is not specified the text of the order!
 Reminder=Reminder
 DeadlineProcessInPastTime=The process deadline is specified in the past time!
 DeadlineTaskInPastTime=The task deadline is specified in the past time!
@@ -295,3 +295,7 @@ ParentNoSet=Parent no set!
 Save\u0421hangesForChangesTakeEffect=Save changes for changes to take effect!
 CannotStartProcessUnprocessedRemarks=You cannot start the process while there are unprocessed comments!
 SystemFolderCannotBeChanged=The folder ''{0}'' is a system folder!
+ProcessDiagramWillBeLoadTempl=The process diagram will be loaded from the template!
+TemplateWillBeOverwritten=The template will be overwritten!
+ProcessDiagramWillBeSavedinSelecTempl=The process diagram will be saved to the template selected in the next step!
+TemplateLoad=Template load!
