Формирование имени схемы и распечатка замечаний

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1034,7 +1034,9 @@ RemarkNotTakenAccount=The remark is not taken into account
 MyFolder=My folder
 AgreedUponEmployee=Agreed upon by the employee
 SaveAsNewTemlate=Save as new template
-SaveSchemaToTemplate=Select a template and save the process diagram to it
+SaveSchemaToTemplate=Save the diagram to current template
 SaveTemlate=Save temlate
 TemplateLoad=Template load!
 EnterPartnerWithoutQuotation=Enter the name of the organization without quotation marks
+SelectTemplateAndSaveScheme=Select a template and save the diagram to it
+RemarksDocument=Remarks to the document
