косяк в замечаниях устранил

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1040,3 +1040,5 @@ TemplateLoad=Template load!
 EnterPartnerWithoutQuotation=Enter the name of the organization without quotation marks
 SelectTemplateAndSaveScheme=Select a template and save the diagram to it
 RemarksDocument=Remarks to the document
+RemarkConfirmed=Remark confirmed
+Eliminated=Eliminated
