управление кнопкой запуска процесса

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -200,7 +200,7 @@ WorkflowIncorrectData=Incorrect workflow route data!
 LinkProcessIncorrect=The link to the process is incorrect. It is possible that the process has been deleted.
 ProcessNotContainDoc=The process ''{0}'' does not contain a document!
 DiagramNotHaveExit=The diagram does not specify a process exit!
-DiagramNotHaveStart=The diagram does not indicated the beginning of the process!
+DiagramNotHaveStart=The scheme must be have the 'Start' or 'Enter' element. No entry point to the process is specified!
 DiagramNotHaveConnectors=Diagram not have a connectors!
 ConfirmInterruptionProcess=You interrupt the process that is currently running! Confirm your action!
 TasksNoHaveDeadline=Not all tasks have a deadline!
