--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1042,3 +1042,6 @@ SelectTemplateAndSaveScheme=Select a template and save the diagram to it
 RemarksDocument=Remarks to the document
 RemarkConfirmed=Remark confirmed
 Eliminated=Eliminated
+CreateMessage=Create message
+Recipient=Recipient
+AddRecipient=Add recipient
