--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1045,3 +1045,6 @@ Eliminated=Eliminated
 CreateMessage=Create message
 Recipient=Recipient
 AddRecipient=Add recipient
+SubProcess=Subprocess
+AddSubProcess=Add subprocess
+ProcessTypesSelector=Process types selector
