--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1048,3 +1048,6 @@ AddRecipient=Add recipient
 SubProcess=Subprocess
 AddSubProcess=Add subprocess
 ProcessTypesSelector=Process types selector
+ModeLoad=Mode of load
+DefaultParams=Default params
+Wait=Wait
