--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -299,3 +299,4 @@ ProcessDiagramWillBeLoadTempl=The process diagram will be loaded from the templa
 TemplateWillBeOverwritten=The template will be overwritten!
 ProcessDiagramWillBeSavedinSelecTempl=The process diagram will be saved to the template selected in the next step!
 TemplateLoad=Template load!
+OperationLongTime=Operation processes long time
