ssl in mail sender

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1051,3 +1051,5 @@ ProcessTypesSelector=Process types selector
 ModeLoad=Mode of load
 DefaultParams=Default params
 Wait=Wait
+CreateDetailedLogFile=Create detailed log file
+LastApproved=Last employee approved?
