--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1053,3 +1053,13 @@ DefaultParams=Default params
 Wait=Wait
 CreateDetailedLogFile=Create detailed log file
 LastApproved=Last employee approved?
+RunOptions=Process run variants
+CreateProcType=Create process type
+DocIsConcorded=Doc is concorded?
+ProcessOptions=Process options
+ShowSubProcCardInit=Show the subprocess card at initialization
+IncorrectSubProcessType=Incorrect subprocess type!
+ShowReportsTable=Show table reports 
+AvailableButton=Available button
+Available=Available
+AvailableActions=Available actions
