--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -229,7 +229,7 @@ TaskIsAssigned=The task is assigned
 Task\u0421anceled=Task canceled
 ReportIsNotFilled=The report is not filled!
 NoteRemoved=Note removed
-TemplateSaved=Template saved!
+TemplateSaved=Template ''{0}'' saved!
 ProcessDiagramWillBeCleared=The process diagram will be cleared!
 AgreeDocument=Agree the document!
 StaffAlreadyAssociated=Attention! The selected staff is already associated with another user! After saving the changes, the connection to the staff unit will be changed!
@@ -298,5 +298,7 @@ SystemFolderCannotBeChanged=The folder ''{0}'' is a system folder!
 ProcessDiagramWillBeLoadTempl=The process diagram will be loaded from the template!
 TemplateWillBeOverwritten=The template will be overwritten!
 ProcessDiagramWillBeSavedinSelecTempl=The process diagram will be saved to the template selected in the next step!
-TemplateLoad=Template load!
+TemplateLoad=Template ''{0}'' load!
 OperationLongTime=Operation processes long time
+DiagramAlreadyOpenInAnotherWindow=The diagram is already open in another window. Only one circuit can be opened at a time!
+IncorrectSubProcessType=Incorrect subprocess type!
