--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1063,3 +1063,6 @@ ShowReportsTable=Show table reports
 AvailableButton=Available button
 Available=Available
 AvailableActions=Available actions
+ParentProcess=Parent process
+MainProcess=Main process
+SubProcesses=Subprocesses
