доработка сроков процессов и задач

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -928,7 +928,7 @@ Green=Green
 Red=Red
 Gray=Gray
 Color=Color
-StandardTermConcorded=The standard term of concorded
+StandardTermConcorded=The standard term
 ConcordedDoc=Concorded document
 DragDropFileForNewProcess=Drag and drop the file here to create a new process
 SelectFileAndCreateProc=Select file and create process
@@ -1059,10 +1059,18 @@ DocIsConcorded=Doc is concorded?
 ProcessOptions=Process options
 ShowSubProcCardInit=Show the subprocess card at initialization
 IncorrectSubProcessType=Incorrect subprocess type!
-ShowReportsTable=Show table reports 
+ShowReportsTable=Show in process card
 AvailableButton=Available button
 Available=Available
 AvailableActions=Available actions
 ParentProcess=Parent process
 MainProcess=Main process
 SubProcesses=Subprocesses
+ExecutionSheet=Execution sheet
+TasksSettings=Tasks settings
+ProcessesSettings=Processes settings
+CreateApprovalProcess=To create the approval process
+EnterInExecutionSheet=Enter in execution sheet
+Role=Role
+Registrator=Registrator
+Inspector=Inspector
