--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -302,3 +302,5 @@ TemplateLoad=Template ''{0}'' load!
 OperationLongTime=Operation processes long time
 DiagramAlreadyOpenInAnotherWindow=The diagram is already open in another window. Only one circuit can be opened at a time!
 IncorrectSubProcessType=Incorrect subprocess type!
+InfoProcExit=All running tasks will be canceled and the timers will be stopped.
+ReplaceTaskDatePlanFromProcess=Replace in task execution time for a period from the process
