доработка сроков процессов и задач2

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -304,3 +304,5 @@ DiagramAlreadyOpenInAnotherWindow=The diagram is already open in another window.
 IncorrectSubProcessType=Incorrect subprocess type!
 InfoProcExit=All running tasks will be canceled and the timers will be stopped.
 ReplaceTaskDatePlanFromProcess=Replace in task execution time for a period from the process
+TaskNoHaveExecutor=The task does not specify the executor!
+OneTasksFailedSetRole=In one of the tasks failed to update the role!
