--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1074,3 +1074,4 @@ EnterInExecutionSheet=Enter in execution sheet
 Role=Role
 Registrator=Registrator
 Inspector=Inspector
+TaskNoHaveExecutor=TaskNoHaveExecutor
