--- a/escom-bpm-resource/src/main/resources/locale/Bundle_ru.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_ru.properties
@@ -1074,3 +1074,4 @@ EnterInExecutionSheet=\u0417\u0430\u043d\u043e\u0441\u0438\u0442\u044c \u0432 \u
 Role=\u0420\u043e\u043b\u044c
 Registrator=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440
 Inspector=\u041f\u0440\u043e\u0432\u0435\u0440\u044f\u044e\u0449\u0438\u0439
+TaskNoHaveExecutor=TaskNoHaveExecutor
