--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1075,3 +1075,5 @@ Role=Role
 Registrator=Registrator
 Inspector=Inspector
 TaskNoHaveExecutor=TaskNoHaveExecutor
+ProcessInState=Process in state
+SubProcessInState=Subprocess in state
