--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -263,7 +263,7 @@ OpenFolderAndRemoveInherits=Open folder and remove option 'inherit right'!
 AllRecordsLoadedConfirm=All records from the database will be loaded! It may take a long time!
 FolderCouldNotBeFound=The folder could not be found!
 OperationIsNotApplicable=This operation is not applicable!
-DiagramNotHaveTasks=In the diagram there are no tasks!
+DiagramNotHaveTasks=In the diagram there are no tasks and no subprocesses!
 NoEmailSpecified=No e-mail specified!
 TaskIsFinishedBecauseProcessComplete=Task is finished, because the process is complete.
 NoYourRemarksActionRequiresRemarks=No Your remarks! This action requires actual remarks!
@@ -306,3 +306,5 @@ InfoProcExit=All running tasks will be canceled and the timers will be stopped.
 ReplaceTaskDatePlanFromProcess=Replace in task execution time for a period from the process
 TaskNoHaveExecutor=The task does not specify the executor!
 OneTasksFailedSetRole=In one of the tasks failed to update the role!
+SubprocessCannotBeStarted=The subprocess cannot be started in this context
+CompanyNotSet=The field 'Company' not set!
