доработка подпроцессов и тд

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1077,3 +1077,5 @@ Inspector=Inspector
 TaskNoHaveExecutor=TaskNoHaveExecutor
 ProcessInState=Process in state
 SubProcessInState=Subprocess in state
+ListSubProcessesToInitialize=List of subprocesses to initialize
+Black=Black
