--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -308,3 +308,4 @@ TaskNoHaveExecutor=The task does not specify the executor!
 OneTasksFailedSetRole=In one of the tasks failed to update the role!
 SubprocessCannotBeStarted=The subprocess cannot be started in this context
 CompanyNotSet=The field 'Company' not set!
+InfoSubProcShowCard=The subprocess window will be displayed and can be edited by the user who performed the route action initializing the subprocess.
