регистрация подпроцессов и др

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1069,7 +1069,7 @@ SubProcesses=Subprocesses
 ExecutionSheet=Execution sheet
 TasksSettings=Tasks settings
 ProcessesSettings=Processes settings
-CreateApprovalProcess=To create the approval process
+CreateApprovalProcess=To Initialize the approval process
 EnterInExecutionSheet=Enter in execution sheet
 Role=Role
 Registrator=Registrator
