--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1079,3 +1079,4 @@ ProcessInState=Process in state
 SubProcessInState=Subprocess in state
 ListSubProcessesToInitialize=List of subprocesses to initialize
 Black=Black
+OpenInExplorer=Open in explorer
