--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -309,3 +309,8 @@ OneTasksFailedSetRole=In one of the tasks failed to update the role!
 SubprocessCannotBeStarted=The subprocess cannot be started in this context
 CompanyNotSet=The field 'Company' not set!
 InfoSubProcShowCard=The subprocess window will be displayed and can be edited by the user who performed the route action initializing the subprocess.
+CreateProcessOnlyAfterSaveDocument=Document not saved! You can create a process only after you save the document.
+DocumentWillBeSavedContinue=The document will be saved! Continue?
+NotifyFromDoc=Notify from document
+PatternInfo=You can use: N-sequence number, YY-year four digits, y-year one digit, T-document type code, O-company code
+InfoChangeRight=When you are finished editing permissions, click Save"
