--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -314,3 +314,4 @@ DocumentWillBeSavedContinue=The document will be saved! Continue?
 NotifyFromDoc=Notify from document
 PatternInfo=You can use: N-sequence number, YY-year four digits, y-year one digit, T-document type code, O-company code
 InfoChangeRight=When you are finished editing permissions, click Save"
+CuratorNotSet=The role of the process Curator is not correct!
