--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -1080,3 +1080,5 @@ SubProcessInState=Subprocess in state
 ListSubProcessesToInitialize=List of subprocesses to initialize
 Black=Black
 OpenInExplorer=Open in explorer
+ArchiveSize=Archive size
+CurrentSize=Current size
